# study

./: .gitignore  .vimrc  CMakeLists.txt  README.md  makefile  stl-iterators.pro  submodule-test.txt  todo.txt
doc/: instruction.md
latex/: Makefile  REAME.md  latex.tex  preamble.tex  thebibliography.tex  titlepage.tex
latex-demo/: makefile
latex/appendix/: appendix-1.tex
latex/chapter/1/: hello_world.tex  main_concepts.tex  why_latex.tex
latex/chapter/2/: about_appendix.tex  about_preamble.tex  about_thebibliography.tex  about_titlepage.tex
latex/latex-demo-old/: README.md  preamble.tex
latex/latex-practice/: Makefile  circle.fig  exampe.tex  figure.py  l.tex  xfig_example.fig
latex/latexhelp/: Makefile  README.md  latexhelp.json  latexhelp.py
latex/latexhelp/example/: latexhelp_alph_example.tex  latexhelp_example.tex  preamble.tex
latex/old/latex-demo/: document.tex
latex/old/latex-practice/: README.md  db.txt  l.tex  p1.tex  preamble.tex
latex/section/: 01_struct_of_doc.tex  01_why_latex.tex  02_struct_of_doc.tex  03_title_page.tex  07_thebibliography.tex  main_concepts.tex
latex/tex/: appendix.tex  commands.tex  conspect.tex  preamble.tex  thebibliography.tex  title.tex
latex/tex/appendix/: appendix-2.tex  linux_cmd.tex
latex/tex/chapter/2/: about_preamble.tex  about_titlepage.tex  about_toc.tex
linux/: spellcheck.sh  wordstat.sh
linux/linux_utils_c/: CMakeLists.txt
linux/linux_utils_c/src/: CMakeLists.txt
linux/linux_utils_c/src/beloff_unit_test/: CMakeLists.txt  beloff_unit_test.c  beloff_unit_test.h
linux/linux_utils_c/src/spellcheck/: CMakeLists.txt  main.c  parse_cmd_line.c  parse_cmd_line.h  show_help.c  show_help.h  test.txt
linux/linux_utils_c/src/wordstat/: CMakeLists.txt  main.c  show_help.c
linux/linux_utils_c/src/wordstatlib/: CMakeLists.txt  get_next_word.c  get_next_word.h  word_stat.c  ws_dict.c  ws_dict.h
linux/linux_utils_c/test/: CMakeLists.txt  get_next_word_ut.c  main.c  run_spellcheck_test.sh  run_spellcheck_valgrind.sh  sample_dict.txt  spellcheck_ut.c  wordstat_ut.c
linux/wordstat/: build.sh  file1.txt
linux/wordstat/src/: CMakeLists.txt  show_help.h
linux/wordstat/src/wordstatlib/: CMakeLists.txt  single_word_stat.c  single_word_stat.h  word_stat.c  word_stat.h
linux/wordstat/test/: CMakeLists.txt  wordstat_ut.c
make-conspect/: document.tex  experiment_flowchart.tex  experiment_flowchart2.tex  flowchart_process_file_targets_only.tex  hierarchy_ques_02.txt  make-conspect.tex  makefile  preamble.tex  ques_01.txt  target_types.txt
make-conspect/demo/prefix_suffix_join_demo/: makefile
make-conspect/makefiles/: default_goal  hello_world_1  hello_world_2
make-conspect/projects/process_test/: Makefile  main.cpp
make-conspect/projects/process_test/interface/: null_stream.h  target.h  time_service.h
make-conspect/projects/process_test/src/: main.cpp  null_stream.cpp  target.cpp  time_service.cpp
make-conspect/projects/process_test/ut/: ut.cpp
make-conspect/projects/qes_01/: README.md  build.sh  clear.sh  main.c  qes.c  qes.h  qes_ut  qes_ut.c  ut.c  ut.h
make-conspect/projects/ques_01/: build.sh  clear.sh  main.c  ques.c  ques.h  ques_ut.c
make-conspect/projects/ques_02/: README.md  makefile
notes/: font-size-tty.txt  scrolling-in-terminal  tty_set_framebuffer_console_memory
optimization/bool_test/: CMakeLists.txt  main.cpp
script/: build.sh
src/: CMakeLists.txt  binder_demo.h  main.cpp  person.h  vts_copy_lib.cmake
src/cmake-study/: CMakeLists.txt
src/cmake-study/cmake-post-build-copy/: CMakeLists.txt
src/cmake-study/cmake-post-build-copy/sumlib/: CMakeLists.txt  sumlib.cpp
src/cmake-study/cmake-post-build-copy/sumlib/include/: sumlib.h
src/cmake-study/cmake-post-build-copy/sumlibdemo/: CMakeLists.txt  main.cpp
src/memory/: CMakeLists.txt
src/memory/cachegrind-demo/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
src/memory/memory-maps/: CMakeLists.txt  main.c
src/memory/valgrind-demo/: CMakeLists.txt  main.c
src/mt/: CMakeLists.txt
src/mt/barrier-for-n-threads/: CMakeLists.txt  desc.txt  main.c  printf_mt.c  printf_mt.h
src/mt/memory-model-atomic-operations/: CMakeLists.txt  main.cpp
src/mt/memory-model-basic/: CMakeLists.txt  main.cpp
src/mt/pthread-demo/: CMakeLists.txt  main.c  utils.c  utils.h
src/mt/std-atomic-bool/: CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt
src/network/tcpdump-demo/: CMakeLists.txt  client.cpp  readme.md  server.cpp
src/optimization/: CMakeLists.txt  main.cpp
src/pn/: Makefile  main  main.cpp
src/python/: matplot_demo.py  python_notes.md  python_notes.txt  python_slices.md  scatter_demo.py  scope_demo.py  se.py  tkinter_demo.py  tkinter_demo_2.py  tkinter_demo_oop.py  vector.py
src/python/dft/: main.py  main2.py
src/python/matplotlib/: 3d_demo.py  3d_demo_01_sfa.py  3d_demo_02_vec_interface.py  3d_demo_03_vec.py  3d_demo_04_arraylike.py
src/python/se_gui/: appcontroller.py  appmodel.py  appview.py  iappview.py  main.py  makefile  solve_square_eq.py
src/sso/: CMakeLists.txt  main.cpp  wht_string.cpp  wht_string.h
src/stack-research/: CMakeLists.txt  main.cpp
src/stl-iterators-training/: CMakeLists.txt  binder_demo.cpp  main.cpp  person.cpp
src/syntax/: CMakeLists.txt
src/syntax/lrvalues/: CMakeLists.txt  a.cpp  a.h  functions.cpp  functions.h  main.cpp
src/syntax/volatile/: CMakeLists.txt  main.cpp
src/testbyteorder/: CMakeLists.txt  testbyteorder.c
src/timer/: CMakeLists.txt  main.cpp
src/timer/technosphera/: technosphera_timer.h
template/: generate_c++_cmake_project.sh  generate_c++_make_project.sh  generate_c_cmake_project.sh  generate_c_make_project.sh
template/c++_cmake_project/: CMakeLists.txt
template/c++_make_project/: Makefile
template/c_cmake_project/: CMakeLists.txt
template/c_make_project/: Makefile
test/: CMakeLists.txt
test/test-sso/: CMakeLists.txt  main.cpp
