add_subdirectory(cmake-study)
add_subdirectory(memory)
add_subdirectory(mt)
add_subdirectory(network)
add_subdirectory(optimization)
add_subdirectory(sso)
add_subdirectory(stack-research)
add_subdirectory(syntax)
add_subdirectory(stl-iterators-training)
add_subdirectory(testbyteorder)
add_subdirectory(timer)

